feat: adds avg price and refactors
