# backend/http/handlers/category.go
@@ -1,8 +1,10 @@
 package handlers
 
 import (
+	"context"
 	"net/http"
 	"strconv"
+	"time"
 
 	"github.com/gin-gonic/gin"
 
@@ -22,10 +24,10 @@ func NewCategoryHandler(service *categoryservice.Service) *CategoryHandler {
 //
 //	@Summary		List all categories
 //	@Description	Returns all categories from the database
-//	@Tags			category
+//	@Tags			categories
 //	@Produce		json
 //	@Success		200	{object}	dto.ListCategoryResponse
-//	@Router			/category [get]
+//	@Router			/categories [get]
 //
 //	@Param			limit	query	int	false	"Number of categories to return (default 10)"
 //	@Param			offset	query	int	false	"Number of categories to skip (default 0)"
@@ -41,10 +43,14 @@ func (h *CategoryHandler) ListCategory(c *gin.Context) {
 		defaultOffset = offset
 	}
 
-	categories, total, err := h.service.List(c.Request.Context(), defaultLimit, defaultOffset)
+	ctx, cancel := context.WithTimeout(c.Request.Context(), 5*time.Second)
+
+	defer cancel()
+
+	categories, total, err := h.service.List(ctx, defaultLimit, defaultOffset)
 
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "internal server error"})
 		return
 	}
 
@@ -60,5 +66,40 @@ func (h *CategoryHandler) ListCategory(c *gin.Context) {
 	c.JSON(http.StatusOK, dto.ListCategoryResponse{
 		Data:  res,
 		Total: total,
+	})
+}
+
+// ListCategoryAveragePrice godoc
+//
+//	@Summary		Get average price per category
+//	@Description	Returns average product price grouped by category
+//	@Tags			categories
+//	@Produce		json
+//	@Success		200	{object}	dto.ListCategoryAvaragePriceResponse
+//	@Router			/categories/avarage-price [get]
+func (h *CategoryHandler) ListCategoryAvaragePrice(c *gin.Context) {
+	ctx, cancel := context.WithTimeout(c.Request.Context(), 5*time.Second)
+
+	defer cancel()
+
+	categoryAveragePrices, err := h.service.ListCategoryAvaragePrice(ctx)
+
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "internal server error"})
+		return
+	}
+
+	res := make([]dto.CategoryAveragePrice, 0, len(categoryAveragePrices))
+
+	for _, c := range categoryAveragePrices {
+		res = append(res, dto.CategoryAveragePrice{
+			Category: c.Category(),
+			AvgPrice: c.AveragePrice(),
+		})
+	}
+
+	c.JSON(http.StatusOK, dto.ListCategoryAvaragePriceResponse{
+		Data:  res,
+		Total: len(categoryAveragePrices),
 	})
 }
